<resources>
    <string name="app_name">SpeechToBSL</string>
    <string name="sign_viewer">Sign Viewer</string>
    <string name="settings_title">Settings</string>
    <string name="settings">Output Settings</string>


    <string name="loading_page_intro">
        "The aim of this app is to allow hearing people to communicate with the deaf community, even when they don\'t know British Sign Language.
    You can use this app in everyday life or as a way to learn BSL - either way you're reducing the divide!"</string>

    <string name="written_desc">Show written BSL under sign:</string>
    <string name="speed_desc">Speed of BSL sequence:</string>
    <string name="save_button">Save</string>
    <string name="logo_desc">Logo</string>
    <string name="go_button">Go!</string>
    <string name="sign_view_desc">Sign</string>

    <string name="slow_speed">Slow</string>
    <string name="medium_speed">Medium</string>
    <string name="fast_speed">Fast</string>

    <string name="start_recording_msg">Press the red button to start recording</string>
    <string name="loading">Loading</string>
    <string name="toast_text">Translation failed - please try again</string>
</resources>
